UCF-APR2.4/ftr main/force-app/main/default/objects/Account_Product__c/Account_Product__c.object-meta.xml
<CustomObject>
    <label>Account Product</label>
    <nameField>
        <label>Account Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>