UCF-APR2.4/ftr main/force-app/main/default/objects/Account_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Products</relationshipLabel>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>