UCF-APR2.4/ftr main/force-app/main/default/objects/Account_Product__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule #</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Account Products</relationshipLabel>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>